# test-media

./: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
include/: MediaServer.h
include/rtmp/: rtmpsession.h
source/: MediaServer.cpp  rtmpsession.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp  main_class_back.cxx  main_raw_rtmp_input.cpp
